# ijkplayer_cmake

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android-ndk-profiler/: CMakeLists.txt
app/src/main/cpp/ffmpeg/: CMakeLists.txt
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavcodec/: avcodec.h  codec_par.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: application.h  channel_layout.h  error.h  fifo.h  frame.h  log.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libffmpeg/: config.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libswresample/: swresample.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/output/include/libffmpeg/: config.h
app/src/main/cpp/ijkj4a/: CMakeLists.txt
app/src/main/cpp/ijkplayer/: CMakeLists.txt  ffmpeg.c
app/src/main/cpp/ijksdl/: CMakeLists.txt
app/src/main/cpp/ijksoundtouch/: CMakeLists.txt
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/java/com/example/ijkplayer/: MainActivity.java  MainActivity.kt  MainViewModel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg.c
ffmpeg/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: ffversion.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openssl/: build.gradle
openssl/src/main/: AndroidManifest.xml
openssl/src/main/cpp/: CMakeLists.txt
